# OpenGL2dEx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  OpenGL2dEx.sln  README.md  configure.sh  generate.sh  readme.md
OpenGL2dEx/: CMakeLists.txt  OpenGL2dEx.vcxproj  OpenGL2dEx.vcxproj.filters  main.cpp
OpenGL2dEx/audio/: CMakeLists.txt
OpenGL2dEx/fonts/: CMakeLists.txt
OpenGL2dEx/glad/: glad.c
OpenGL2dEx/levels/: CMakeLists.txt
OpenGL2dEx/shaders/: CMakeLists.txt  effects.fs  effects.vs  particle.fs  particle.vs  sprite.fs  sprite.vs  text_2d.fs  text_2d.vs
OpenGL2dEx/stbi/: CMakeLists.txt
OpenGL2dEx/textures/: CMakeLists.txt
OpenGL2dEx/textures/power_ups/: CMakeLists.txt
OpenGL2dEx/util/: CMakeLists.txt  array_helpers.h  audio_manager.cpp  audio_manager.h  ball_object.cpp  ball_object.h  count_of.h  element.h  element_list.h  element_pair.h  game.cpp  game.h  game_ended_overlay.cpp  game_ended_overlay.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  game_viewport.cpp  game_viewport.h  gl_debug.h  label.h  level_selection_menu.cpp  level_selection_menu.h  logging.h  main_menu.cpp  main_menu.h  menu.cpp  menu.h  opening_menu.cpp  opening_menu.h  optional.h  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  power_up.h  reset_gl_properties.h  resource_mgr.cpp  resource_mgr.h  (+16 more)
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/irrklang/: LICENSE.txt
