add_subdirectory(power_ups)

copy_resource_to_build(OpenGL2dEx awesomeface.png awesomeface.png)
copy_resource_to_build(OpenGL2dEx background.jpg background.jpg)
copy_resource_to_build(OpenGL2dEx block.png block.png)
copy_resource_to_build(OpenGL2dEx block_solid.png block_solid.png)
copy_resource_to_build(OpenGL2dEx paddle.png paddle.png)
copy_resource_to_build(OpenGL2dEx particle.png particle.png)